# Cool

./: .gitignore  CMakeLists.txt  Cool.icns  DISTRIBUTION.md  INSTALLATION_GUIDE.md  Info.plist  Makefile  README.md  build.sh  build_dmg.sh
src/: ContentView.swift  CoolApp.swift  CppBridge.swift  VideoManager.swift  WallpaperEngine.cpp  WallpaperEngine.hpp  WindowManager.mm  main.mm
